--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
     implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
     implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+    implementation 'com.h2database:h2:1.4.200'
 }
 
 tasks.named('test') {
